[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Tabs.gd" type="Script" id=1]
[ext_resource path="res://Menu/Settings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Level Select.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="Tabs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Settings" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Store" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Level Select" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1

[node name="Game" type="Button" parent="Panel/HBoxContainer"]
margin_left = 96.0
margin_right = 296.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 100 )
text = "Game"

[node name="Level Select" type="Button" parent="Panel/HBoxContainer"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 100 )
text = "Level Select"

[node name="Store" type="Button" parent="Panel/HBoxContainer"]
margin_left = 504.0
margin_right = 704.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 100 )
text = "Store"

[node name="Settings" type="Button" parent="Panel/HBoxContainer"]
margin_left = 708.0
margin_right = 908.0
margin_bottom = 180.0
rect_min_size = Vector2( 200, 100 )
text = "Settings"
[connection signal="pressed" from="Panel/HBoxContainer/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Level Select" to="." method="_on_Level_Select_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Store" to="." method="_on_Store_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
